# DA2

./: CMakeLists.txt
Data/Real-world Graphs/graph2/: edges.csv
Data/Real-world Graphs/graph3/: edges.csv
DataStructures/: Graf.cpp  Graf.h  Graph.cpp  Graph.h  Heap.cpp  Heap.h  TSP.cpp  TSP.h  UFDS.cpp  UFDS.h  VertexEdge.cpp  VertexEdge.h
src/: Menu.cpp  Menu.h  Readfiles.cpp  Readfiles.h  main.cpp  tsp.cpp  tsp.h
